Updated README. Hopefully fixed bouncing scroll on Safari messing with the nav bar. Some minor formatting fixes.

--- a/src/mystyles.scss
+++ b/src/mystyles.scss
@@ -37,6 +37,10 @@ $navbar-item-hover-background-color: $primary;
   font-size: 1.25em;
 }
 
+.intro-arrow {
+  padding-bottom: 20px;
+}
+
 .hero-content {
   width: 100%;
 }
